--- a/index.html
+++ b/index.html
@@ -28,16 +28,12 @@
   </head>
   <body>
     <div class="pre-checkout-state-div">
-      <div class="checkout-section-div">
+      <div class="checkout-section-div hidden">
         <div class="purchase-btn-div">
           <b class="btn-text">Complete order</b>
         </div>
-        <div class="item-price-2">$12</div>
-        <div class="remove-item-btn">remove</div>
-        <div class="item-name-2">Beer</div>
-        <div class="item-price-1">$14</div>
-        <div class="remove-item-btn1">remove</div>
-        <div class="item-name-1">Pizza</div>
+        <div id="order-feed"></div>
+        
         <div class="divider3"></div>
         <div class="total-price-text">Total price:</div>
         <div class="total-price-div">$26</div>
