--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
   </head>
   <body>
     <div class="pre-checkout-state-div">
-      <div class="checkout-section-div hidden">
+      <div class="checkout-section-div" id="checko">
         <div class="purchase-btn-div">
           <b class="btn-text">Complete order</b>
         </div>
-        <div id="order-feed"></div>
+        <div id="order-feed">
+
+
+
+
+          
+        </div>
         
         <div class="divider3"></div>
         <div class="total-price-text">Total price:</div>
