--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="pre-checkout-state-div">
-      <div class="checkout-section-div" id="checko">
+      <div class="checkout-section-div hidden" id="checko">
         <div class="purchase-btn-div">
           <b class="btn-text">Complete order</b>
         </div>
@@ -42,7 +42,7 @@
         
         <div class="divider3"></div>
         <div class="total-price-text">Total price:</div>
-        <div class="total-price-div">$26</div>
+        <div id="totalH" class="total-price-div">$0</div>
         <div class="title-div">Your order</div>
       </div>
 
