--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <span class="close-button">&times;</span>
         <h3>Enter Card Details</h3>
       <form>
-      <input type="text" required placeholder="Enter Name" />
+      <input type="text" id="namecc" required placeholder="Enter Name" />
       <input type="number" required placeholder="Enter Card Number" />
       <input type="number" required placeholder="Enter Cvv" />
       <button id="second-sub">Pay</button>
